--- a/styles/app.css
+++ b/styles/app.css
@@ -40,7 +40,7 @@ h1, h2, h3, h4, h5, h6 {
 
 /*ESTILOS HEADER*/
 
-.main-header {
+.main__header {
     width: 100%;
 }
 
@@ -52,20 +52,20 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: 500;
 }
 
-.main-header__contactInfo__phone {
+.main__header-contactinfo-phone {
     background: #DE423A;
     color: white;
     margin: 0 auto;
     padding: 10px;
 }
 
-.main-header__contactInfo__address {
+.main__header-contactinfo-address {
     margin: 0 auto;
     padding: 10px;
 
 }
 
-.main-header [class*="fa-solid"]:before {
+.main__header [class*="fa-solid"]:before {
     position: relative;
     bottom: 1px;
     right: 5px;
@@ -204,7 +204,7 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: 100;
 }
 
-.main__about__description .column:nth-child(2) {
+.main__about-description .column:nth-child(2) {
     padding: 10px;
     text-align: center;
 }
@@ -300,15 +300,15 @@ h1, h2, h3, h4, h5, h6 {
         padding: 10px 10px;
     }
 
-    .main-header__contactInfo {
+    .main__header-contactinfo {
         text-align: right;
     }
 
-    .main-header__contactInfo__phone {
+    .main__header-contactinfo-phone {
         background: none;
     }
 
-    .main-header__contactInfo__address {
+    .main__header-contactinfo-address {
         color: white;
     }
 
@@ -329,7 +329,7 @@ h1, h2, h3, h4, h5, h6 {
         font-size: 2em;
     }
 
-    .main__about__description .column:nth-child(2) {
+    .main__about-description .column:nth-child(2) {
         padding-left: 20px;
         font-size: .9em;
     }
@@ -384,7 +384,7 @@ h1, h2, h3, h4, h5, h6 {
         height: 660px;
     }
 
-    .main__about__description .column:nth-child(2) {
+    .main__about-description .column:nth-child(2) {
         padding-left: 20px;
         font-size: 1em;
         line-height: 30px;
@@ -423,7 +423,8 @@ h1, h2, h3, h4, h5, h6 {
         padding: 0;
     }
 
-    .main-header__contactInfo__address, .main-header__contactInfo__phone {
+    .main__header-contactinfo-address
+    .main__header-contactinfo-phone {
         padding: 0;
         padding-right: 0;
         font-size: 1.2em;
@@ -471,7 +472,7 @@ h1, h2, h3, h4, h5, h6 {
         font-size: 1.8em;
     }
 
-    .main__about__description .column:nth-child(2) .column__txt {
+    .main__about-description .column:nth-child(2) .column__txt {
         line-height: 40px;
     }
 
@@ -507,7 +508,7 @@ h1, h2, h3, h4, h5, h6 {
         height: 810px;
     }
 
-    .main__about__description .column:nth-child(1) img {
+    .main__about-description .column:nth-child(1) img {
         width: 100%;
         height: 350px;
         object-fit: cover;
